[#4] fixed CI issues